Organização de rotas de documentação swagger
